# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff_check.yml  pyci.yml
gendif/: __init__.py  diff.py  parser.py
gendif/formatters/: formater.py
gendif/modules/: main.py
gendif/scripts/: gendiff.py
gendiff/: cli.py  diff.py  generate_diff.py  parser.py
gendiff/formatters/: formater.py  plain.py  simple.py  stylish.py
scripts/: gendiff.py
tests/: test_diff.py  test_formates.py  test_gen_diff.py  test_gendiff.py  test_generate_diff.py  test_value_to_str.py
tests/fixtures/: diff  example_file2.json  example_file2.yml  expected_val_for_example.txt  file2.yaml  simple_diff.txt  test.py
