[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "compare json files"
authors = ["Krusovice <kickstar69@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendif" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendif.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
