[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "compare json files"
authors = ["Krusovice <kickstar69@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "gendif" },
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
gendiff = "gendif.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
